<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dashboard.DashboardFragment"
    android:fitsSystemWindows="true"
    android:layout_marginTop="0dp">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="360dp"
        android:layout_height="39dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="41dp"
        android:layout_marginRight="41dp"
        android:gravity="start"
        android:text="@string/description_dashboard"
        android:textAlignment="textStart"
        android:textColor="@color/design_default_color_error"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/refresh"
        android:layout_width="52dp"
        android:layout_height="25dp"
        android:layout_marginStart="3dp"
        android:layout_marginLeft="3dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:src="@drawable/refresh"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/upTime"
        app:layout_constraintTop_toBottomOf="@+id/textView1" />

    <TextView
        android:id="@+id/upTime"
        android:layout_width="322dp"
        android:layout_height="27dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="3dp"
        android:layout_marginRight="3dp"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/refresh"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView1" />

    <ScrollView
        android:layout_width="381dp"
        android:layout_height="441dp"
        android:layout_marginStart="18dp"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/upTime">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView32"
                    android:layout_width="180dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/infect" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView44"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:text="@string/total"
                        android:textAlignment="center"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        tools:ignore="RtlCompat" />

                    <TextView
                        android:id="@+id/total"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_gravity="center_horizontal"
                        android:textAlignment="center"
                        android:textColor="@color/design_default_color_on_secondary"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="78dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView12"
                    android:layout_width="178dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/new23" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView41"
                        android:layout_width="match_parent"
                        android:layout_height="33dp"
                        android:gravity="center_horizontal"
                        android:text="@string/newp"
                        android:textAlignment="center"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/newP"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:gravity="center_horizontal"
                        android:textAlignment="center"
                        android:textColor="@color/design_default_color_on_secondary"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView33"
                    android:layout_width="165dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/recovered" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView411"
                        android:layout_width="match_parent"
                        android:layout_height="38dp"
                        android:gravity="center_horizontal"
                        android:text="@string/recovered"
                        android:textAlignment="center"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/recoverd"
                        android:layout_width="match_parent"
                        android:layout_height="42dp"
                        android:gravity="center_horizontal"
                        android:textAlignment="center"
                        android:textColor="@color/design_default_color_on_secondary"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView312"
                    android:layout_width="171dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/active" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="84dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView31"
                        android:layout_width="match_parent"
                        android:layout_height="43dp"
                        android:gravity="center_horizontal"
                        android:text="@string/newdeaths"
                        android:textAlignment="center"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/hospitalized"
                        android:layout_width="match_parent"
                        android:layout_height="41dp"
                        android:gravity="center_horizontal"
                        android:textAlignment="center"
                        android:textColor="@color/design_default_color_on_secondary"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="83dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView313"
                    android:layout_width="101dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/deaths" />

                <LinearLayout
                    android:layout_width="297dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="match_parent"
                        android:layout_height="37dp"
                        android:gravity="center_horizontal"
                        android:text="@string/dead"
                        android:textAlignment="center"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/dead"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:gravity="center_horizontal"
                        android:textAlignment="center"
                        android:textColor="@color/design_default_color_on_secondary"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>



            <TextView
                android:id="@+id/textView3"
                android:layout_width="357dp"
                android:layout_height="23dp"
                android:text="Created By DMKK" />
        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>